force-app/main/default/objects/Integration_Log__c/Integration_Log__c.object-meta.xml
<CustomObject>
<description>Operational logs for external system integrations and cron operations.</description>
<label>Integration Log</label>
<nameField>
<displayFormat>INT-{000000}</displayFormat>
<label>Integration Log Name</label>
<type>AutoNumber</type>
</nameField>
<pluralLabel>Integration Logs</pluralLabel>
<sharingModel>ReadWrite</sharingModel>
</CustomObject>