force-app/main/default/objects/Integration_Log__c/fields/Request_Body__c.field-meta.xml
<CustomField>
    <fullName>Request_Body__c</fullName>
    <label>Request</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>