force-app/main/default/objects/Integration_Log__c/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <label>System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TeleCMI</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>Reader</fullName>
            </value>
            <value>
                <fullName>FHIR</fullName>
            </value>
            <value>
                <fullName>Scheduler</fullName>
            </value>
            <value>
                <fullName>HIS</fullName>
            </value>
            <value>
                <fullName>App</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Courier</fullName>
            </value>
            <value>
                <fullName>Lab</fullName>
            </value>
            <value>
                <fullName>Meta</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>