force-app/main/default/objects/Integration_Log__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HTTP</fullName>
                <default>true</default>
                <label>HTTP</label>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>Platform Event</fullName>
            </value>
            <value>
                <fullName>FHIR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>